2000-03-03  Yo Ric Dude  <ricdude@toad.net>

	* docs/Makefile.am, docs/Makefile.in, Makefile.am, configure.in:
 	updated configure and automake setup to generate html and
 	postscript docs on make dist.  Now if the documentation were
 	useful...  Also, the ALSA 0.5 patch was originally submitted by
 	Tom Prado <tprado@charter.net>.  There may be a similar patch from
 	someone else in my inbox, but it's a mess. Sorry if I forgot you.
  	Many thanks to Mark Crichton for testing, tweaking, and confirming
 	backwards compatibility with previous ALSA releases.

2000-03-02  Mark Crichton  <crichton@gimp.org>

	* audio_alsa.c: Added support from Rik to add ALSA 0.5 API support
	Also backwards compatable.

2000-01-04  Timur Bakeyev  <mc@bat.ru>

	* esddsp.c: Wrapped with #ifdef SNDCTL_DSP_GETCAPS. Old OSS driver 
	doesn't	have it..

1999-10-11  Drazen Kacar  <dave@srce.hr>

	* audio_solaris.c: Don't spit warnings if /dev/audio doesn't
	exist. User probably knows he doesn't have a sound card.

1999-10-06  Russell Steinthal  <rms39@columbia.edu>

	* esdlib.c (esd_connect_tcpip): Fix case in which user specifies
	only a port number (first character of host is :)

1999-09-20  Raja R Harinath  <harinath@cs.umn.edu>

	* configure.in (nanosleep): Look also in -lrt.
	Suggested by Drazen Kacar <dave@srce.hr>.

1999-09-03  Yo Ric Dude  <ericmit@ix.netcom.com>

	* audio_alsa.c: evil macro hacks to map the new alsa names, 
	SND_PCM_OPEN_CAPTURE and snd_pcm_capture_format, to the old names, 
	SND_PCM_OPEN_RECORD and snd_pcm_record_format.  Why alsa doesn't
	do this itself...

	* esdlib.c: (esd_open_sound): if no ESPEAKER is set, but DISPLAY
 	is, try to connect to the default port on that host. Thanks to
 	Charles Galambos <ees1cg@ee.surrey.ac.uk>.

1999-08-20  Elliot Lee  <sopwith@redhat.com>
	* *.c, esd-server.h: Fix warnings, bump version to 0.2.13.

1999-08-19  Kjartan Maraas  <kmaraas@online.no>

	* mix.c: (clip_mix_to_output_8u): Change *output to unsigned int
	from signed int.
	